<resources>
    <string name="app_name">Ref</string>
    <string name="map_api_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="search_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Do you agree to the terms and conditions?</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate this App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy Policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="choose_language">Choose Language</string>
    <string name="next">next</string>
    <string name="welcome_in_emdad"><![CDATA[Welcome in <font color="#ffcb04">Ref App</font>]]></string>
    <string name="get_all_service"><![CDATA[Get all kinds of Services for <font color="#2e3233">anywhere</font>in your city]]></string>
    <string name="when_it_comes"><![CDATA[When it comes to ordering we has the <font color="#2e3233">best experience</font>]]></string>
    <string name="free_order_discussion"><![CDATA[Free order discussion with the couriers <font color="#2e3233">all the time</font>]]></string>
    <string name="we_deliver_order">We deliver your order to your site or wherever you choose</string>
    <string name="get_discounts"><![CDATA[Get <font color="#ffcb04">discounts</font>]]></string>
    <string name="easy_comm"><![CDATA[Easy <font color="#ffcb04">Communication</font>]]></string>
    <string name="many_discount">You can get many discounts from a large number of our exclusive stores</string>
    <string name="delegate_contact">You can always contact the delegate while getting your order</string>
    <string name="start">Start</string>
    <string name="phone_number">Phone number</string>
    <string name="country_code">Country code</string>
    <string name="code_verification">Code verification</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="resend_in">Resend in</string>
    <string name="resend">Resend</string>
    <string name="stores">Stores</string>
    <string name="order">Order</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="delivering">Delivering</string>
    <string name="ch_year">Choose year of birth</string>
    <string name="ch_gender">Choose gender</string>
    <string name="name">Name</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_year">Choose year</string>
    <string name="ok2">OK</string>
    <string name="how_can_i_help_you">How can i help you ?</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="show_previous_order">Show previous orders</string>
    <string name="new_order">New order</string>
    <string name="shop_list">Shop list</string>
    <string name="location_on_map">Location on map</string>
    <string name="order_where">Okay so where do you want to make you order from...?</string>
    <string name="welcome_experience">Welcome to our new ordering Experience</string>
    <string name="we_deliver_anything_city">We deliver anything, from anywhere within your city</string>
    <string name="good_place">Good, you picked this place to get your order from</string>
    <string name="order_details">Order details</string>
    <string name="change">Change</string>
    <string name="what_need">What do you need from there ?</string>
    <string name="write_what_you_want">Write what you want</string>
    <string name="choose_drop_loc">Now i need the drop off location that you want us to deliver to it</string>
    <string name="open_map">Open map</string>
    <string name="drop_off_location">Drop off Location</string>
    <string name="how_pay">Okay, how do you want to pay for this order</string>
    <string name="cash">Cash</string>
    <string name="add_coupon">Add coupon</string>
    <string name="don_t_have_coupon">Don\'t have coupon</string>
    <string name="all_finished">All finished and your order is ready, is there anything you want to change</string>
    <string name="change_order">Change order</string>
    <string name="submit_order">Submit order</string>
    <string name="package_delivery">Package delivery</string>
    <string name="loc_pic_drop">Sure, Share with us the location of the Pick up and Drop off</string>
    <string name="share_location">Share location</string>
    <string name="how_tp_pay_coupon">Okay, how do you want to pay for this order</string>
    <string name="restart">Restart</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="i_want_restaurant">I want restaurant,location,coffee...</string>
    <string name="your_location_near_you">Your location (near you)</string>
    <string name="results_for">Results for</string>
    <string name="filter">Filter</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="can_t_find_any_shop_or_service_try_different_criteria">Can\'t find any shop or service, try different criteria</string>
    <string name="km">km</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="apply">Apply</string>
    <string name="restaurants">Restaurants</string>
    <string name="supermarket">Supermarket</string>
    <string name="bakery">Bakery</string>
    <string name="cafe">Cafe</string>
    <string name="florist">Florist</string>
    <string name="library">Library</string>
    <string name="order2">Order</string>
    <string name="write_here_details_order">Write here the details of your order,for example: i want 1 Cheeseburger,1 Large Fries,Please write also how much is the approximate cost of your order.</string>
    <string name="done">Done</string>
    <string name="you_can_use_coupon">Okay, you can use coupons to pay for the delivery of the order</string>
    <string name="map">Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="paste_google_coordination">Paste google map URL or coordination</string>
    <string name="confirm_drop_off">Confirm drop off</string>
    <string name="saved_location">Saved location</string>
    <string name="location_name">Location name</string>
    <string name="home2">Home</string>
    <string name="work">Work</string>
    <string name="save">Save</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop off</string>
    <string name="change_location_current_location">Change location (Current location)</string>
    <string name="choose_location">Choose location</string>
    <string name="not_yet_chosen_location">Not yet chosen location</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="account_balance">Account Balance</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="service_reviews">Service Reviews</string>
    <string name="users_feedback">Users Feedback</string>
    <string name="coupons">Coupons</string>
    <string name="settings">Settings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="get_in_touch_with_us_at_telegram">Get in touch with us at Telegram</string>
    <string name="enter_coupon_code">ENTER COUPON CODE...</string>
    <string name="want_to_get_the_latest_coupons">Want to get the latest coupons?</string>
    <string name="follow_us_on">follow us on</string>
    <string name="and1">and</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="verify">Verify</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="browse_stores">Browse Stores</string>
    <string name="old_orders">Old Orders</string>
    <string name="no_old_orders_found">No Old Orders Found</string>
    <string name="general_settings">General settings</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="my_field_complaints">My Field Complaints</string>
    <string name="language_settings">Language Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help">Help</string>
    <string name="app_tour">App Tour</string>
    <string name="how_to_be_come_a_delegate">How to be come a DELEGATE</string>
    <string name="version_no">Version No:</string>
    <string name="customers_rating">Customers Rating</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="show">Show</string>
    <string name="open_now">Open Now</string>
    <string name="delivery">Delivery</string>
    <string name="stop_alerts">Disable Alerts</string>
    <string name="alerts_disabled">Alerts Disabled</string>
    <string name="there_are_orders_near_you_waiting_for_delivery">There are orders near you waiting for delivery</string>
    <string name="enable_alerts">Enable Alerts</string>
    <string name="so_that_submit_offers">So that you can receive orders alerts and submit offers</string>
</resources>