<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color4"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/saved_location"
            />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            android:maxLines="2"
            android:textColor="@color/gray6"
            />

        <EditText
            android:id="@+id/edtLocationName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:background="@drawable/small_stroke_primary"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="@color/gray4"
            android:hint="@string/location_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"

            >
            <FrameLayout
                android:id="@+id/flHome"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/small_rounded_primary"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    >
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_home2"
                        android:tint="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/home2"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        />
                </LinearLayout>
            </FrameLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>
            <FrameLayout
                android:id="@+id/flWork"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/small_rounded_primary"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    >
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_bag"
                        android:tint="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/work"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        />
                </LinearLayout>
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_gravity="end"
            >
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:text="@string/save"
                android:background="@color/transparent"
                />
            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray9"
                android:textSize="17sp"
                android:text="@string/cancel"
                android:background="@color/transparent"
                />
        </LinearLayout>
    </LinearLayout>
</layout>