<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color4"
            android:textSize="15sp"
            android:text="@string/choose_year"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <ImageView
            android:id="@+id/imageUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_up_arrow"
            android:tint="@color/gray4"
            android:padding="5dp"
            />
        <NumberPicker
            android:id="@+id/picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/imageDown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_down_arrow"
            android:tint="@color/gray4"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"

            >
            <Button
                android:id="@+id/btnOk"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/small_rounded_primary"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/ok2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/cancel"


                />
        </LinearLayout>
    </LinearLayout>
</layout>