<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="1dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_e"
                android:padding="12dp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="1dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:contentPadding="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color4"
                    android:text="@string/how_can_i_help_you"
                    />

                <TextView
                    android:id="@+id/tvPreviousOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/show_previous_order"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray1"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"

                    />

                <TextView
                    android:id="@+id/tvNewOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/new_order"
                    android:layout_marginTop="10dp"
                    android:gravity="center"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray1"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/tvPackage"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/package_delivery"
                    android:layout_marginTop="10dp"
                    android:gravity="center"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>