<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.apps.ref.models.UserModel" />

        <import type="android.view.View"/>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_old_orders.OldOrdersActivity"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"

                        >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:src="@color/gray1_trans" />

                        <ImageView
                            android:id="@+id/close"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            android:src="@drawable/ic_next"
                            android:tint="@color/color4"


                            />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/delivery"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/small_rounded_primary"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/stop_alerts"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility='@{model==null?View.INVISIBLE:(model.user.receive_notifications.equals("yes")?View.VISIBLE:View.INVISIBLE),default=gone}'

                    />





            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <ProgressBar
                android:id="@+id/prgBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility='@{model==null?View.INVISIBLE:(model.user.receive_notifications.equals("yes")?View.VISIBLE:View.GONE),default=invisible}'
                />


            <LinearLayout
                android:id="@+id/llAlertOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/alerts_disabled"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray11"
                    android:text="@string/there_are_orders_near_you_waiting_for_delivery"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"

                    />



                <ImageView
                    android:layout_width="230dp"
                    android:layout_height="280dp"
                    android:src="@drawable/enable_alert"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/btnEnableAlerts"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:textColor="@color/white"
                    android:background="@drawable/small_rounded_primary"
                    android:text="@string/enable_alerts"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/gray11"
                    android:layout_marginTop="10dp"
                    android:text="@string/so_that_submit_offers"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNoOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_delivery_truck2"
                    android:tint="@color/gray6"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray6"
                    android:textSize="25sp"
                    android:text="@string/no_orders_found"
                    />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</layout>
